--- a/PanningUpgrades/i18n/tr.json
+++ b/PanningUpgrades/i18n/tr.json
@@ -6,14 +6,14 @@
   "config.BuyCost.name": "Tepsi Ücreti",
   "config.BuyCost.tooltip": "Willy'den yeni bir tepsi almanın maliyeti.",
   "config.UpgradeCostMultiplier.name": "Yükseltme Ücreti Çarpanı",
-  "config.UpgradeCostMultiplier.tooltip": "Tepsi yükseltme ücretinin çarpanı. 1.0 ise diğer araçlarla aynı maliyete sahip olur. 0.5 ise çöp kovası ile aynı maliyete sahip olur.",
+  "config.UpgradeCostMultiplier.tooltip": "Tepsi yükseltme ücretinin çarpanı. 1.0 ise diğer araçlarla aynı maliyete sahip olur. 0.5 ise çöp kutusu ile aynı maliyete sahip olur.",
   "config.UpgradeCostBars.name": "Yükseltme İçin Gereken Külçe",
   "config.UpgradeCostBars.tooltip": "Tepsiyi yükseltmek için gereken külçe (bakır, demir, vb.) sayısı.",
   "config.UpgradeDays.name": "Yükseltme İçin Gereken Gün",
   "config.UpgradeDays.tooltip": "Tepsiyi yükseltmek için geçmesi gereken gün sayısı.",
 
   "config.ExtraDrawBaseChance.name": "Fazladan Eşya Çekme Şansı",
-  "config.ExtraDrawBaseChance.tooltip": "Fazladan eşya düşme olayının olma şansı. Her yükseltme seviyesi, altın ararken bir fazladan eşya çekme olasılığı sağlar.",
+  "config.ExtraDrawBaseChance.tooltip": "Fazladan eşya çekme olayının olma şansı. Her yükseltme seviyesi, altın ararken bir fazladan eşya çekme olasılığı sağlar.",
   "config.DailyLuckMultiplier.name": "Günlük Şans Çarpanı",
   "config.DailyLuckMultiplier.tooltip": "Günlük şans, bu sayı ile çarpılır ve ardından fazladan eşya çekme şansına eklenir.",
   "config.LuckLevelMultiplier.name": "Şans Seviyesi Çarpanı",
