--- a/SocializingSkill/i18n/tr.json
+++ b/SocializingSkill/i18n/tr.json
@@ -26,59 +26,59 @@
     "dialogue.beloved.rare": "Hey {{name}}, bence bunu sevebilirsin.",
     "dialogue.beloved.superrare": "Bunu gördüm ve bayılacağını düşündüm.",
 
-    "config.ExperienceModifiers": "Experience Modifiers",
-    "config.SkillPerkModifiers": "Skill Perk Modifiers",
-    "config.ProfessionModifiers": "Profession Modifiers",
+    "config.ExperienceModifiers": "Deneyim Puanı Ayarları",
+    "config.SkillPerkModifiers": "Yetenek Avantajı Ayarları",
+    "config.ProfessionModifiers": "Uzmanlık Alanı Ayarları",
 
-    "config.ExperienceFromTalking": "Exp From Talking",
-    "config.ExperienceFromTalking.tooltip": "Experience gained from talking to villagers",
-    "config.ExperienceFromGifts": "Exp From Gifts",
-    "config.ExperienceFromGifts.tooltip": "Experience gained from giving gifts to villagers",
-    "config.ExperienceFromEvents": "Exp From Events",
-    "config.ExperienceFromEvents.tooltip": "Experience gained from heart events",
-    "config.ExperienceFromQuests": "Exp From Quests",
-    "config.ExperienceFromQuests.tooltip": "Experience gained from completeing bulletin board requests",
-    "config.LovedGiftExpMultiplier": "Loved Gift Experience Multiplier",
-    "config.LovedGiftExpMultiplier.tooltip": "Multiplies experience gained from giving gifts if the villager loves the gift",
-    "config.BirthdayGiftExpMultiplier": "Birthday Gift Experience Multiplier",
-    "config.BirthdayGiftExpMultiplier.tooltip": "Multiplies experience gained from giving gifts if it is the villagers birthday",
+    "config.ExperienceFromTalking": "Konuşmanın Sağladığı Deneyim",
+    "config.ExperienceFromTalking.tooltip": "Kasabalılarla konuşarak elde edilen deneyim.",
+    "config.ExperienceFromGifts": "Hediyelerin Sağladığı Deneyim",
+    "config.ExperienceFromGifts.tooltip": "Kasabalılara hediye vererek elde edilen deneyim.",
+    "config.ExperienceFromEvents": "Kalp Olaylarının Sağladığı Deneyim",
+    "config.ExperienceFromEvents.tooltip": "Kalp olaylarından kazanılan deneyim.",
+    "config.ExperienceFromQuests": "Görevlerin Sağladığı Deneyim",
+    "config.ExperienceFromQuests.tooltip": "İlan panosundaki görevleri tamamlayarak elde edilen deneyim.",
+    "config.LovedGiftExpMultiplier": "Sevilen Hediye Deneyim Puanı Çarpanı",
+    "config.LovedGiftExpMultiplier.tooltip": "Kasabalı hediyeyi seviyorsa, hediye vermekten kazanılan deneyimi katlar.",
+    "config.BirthdayGiftExpMultiplier": "Doğum Günü Hediyesi Deneyim Puanı Çarpanı",
+    "config.BirthdayGiftExpMultiplier.tooltip": "Kasabalının doğum günüyse, hediye vermekten kazanılan deneyimi katlar.",
 
-    "config.ChanceNoFriendshipDecayPerLevel": "Chance Of No Decay Per Level",
-    "config.ChanceNoFriendshipDecayPerLevel.tooltip": "Per level chance that friendship won't decay overnight",
+    "config.ChanceNoFriendshipDecayPerLevel": "Seviye Başına Azalma Olmama Şansı",
+    "config.ChanceNoFriendshipDecayPerLevel.tooltip": "Arkadaşlığın günlük olarak azalmaması için seviye başına şans.",
 
-    "config.FriendlyProfessionModifiers": "Friendly Profession Modifiers",
-    "config.FriendlyExtraFriendship": "Extra Friendship",
-    "config.FriendlyExtraFriendship.tooltip": "Extra friendship from talking to someone when you have the Friendly profession",
+    "config.FriendlyProfessionModifiers": "Arkadaş Canlısı Uzmanlığı Ayarları",
+    "config.FriendlyExtraFriendship": "Fazladan Arkadaşlık Puanı",
+    "config.FriendlyExtraFriendship.tooltip": "Arkadaş Canlısı uzmanlığına sahipken biriyle konuşmaktan kazanılan fazladan arkadaşlık puanı.",
 
-    "config.SmoothTalkerProfessionModifiers": "Smooth Talker Profession Modifiers",
-    "config.SmoothTalkerPositiveMultiplier": "Positive Multiplier",
-    "config.SmoothTalkerPositiveMultiplier.tooltip": "Multiplies positive event responses by this amount when you have the Smooth Talker profession (keey > 1 to make responses better)",
-    "config.SmoothTalkerNegativeMultiplier": "Negative Multiplier",
-    "config.SmoothTalkerNegativeMultiplier.tooltip": "Multiplies negative event responses by this amount when you have the Smooth Talker profession (keep > 0 and < 1 to make responses better, but not positive)",
+    "config.SmoothTalkerProfessionModifiers": "Tatlı Dilli Uzmanlığı Ayarları",
+    "config.SmoothTalkerPositiveMultiplier": "Olumlu Çarpan",
+    "config.SmoothTalkerPositiveMultiplier.tooltip": "Tatlı Dilli uzmanlığına sahipken olumlu olay yanıtlarını bu miktarla çarpar (Cevapları daha iyi yapmak için 1'den büyük tutun).",
+    "config.SmoothTalkerNegativeMultiplier": "Olumsuz Çarpan",
+    "config.SmoothTalkerNegativeMultiplier.tooltip": "Tatlı Dilli uzmanlığına sahipken olumsuz olay yanıtlarını bu miktarla çarpar (Cevapları daha iyi hale getirmek, ancak olumlu yapmamak için 0 ile 1 arasında tutun).",
 
-    "config.GifterProfessionModifiers": "Gifter Profession Modifiers",
-    "config.GifterLovedGiftExtraFriendship": "Loved Gift Extra Friendship",
-    "config.GifterLovedGiftExtraFriendship.tooltip": "Extra friendship for loved gifts when you have the Gifter profession",
-    "config.GifterLikedGiftExtraFriendship": "Liked Gift Extra Friendship",
-    "config.GifterLikedGiftExtraFriendship.tooltip": "Extra friendship for liked gifts when you have the Gifter profession",
-    "config.GifterNeutralGiftExtraFriendship": "Neutral Gift Extra Friendship",
-    "config.GifterNeutralGiftExtraFriendship.tooltip": "Extra friendship for neutral gifts when you have the Gifter profession",
+    "config.GifterProfessionModifiers": "Hediye Veren Uzmanlığı Ayarları",
+    "config.GifterLovedGiftExtraFriendship": "Sevilen Hediye Fazladan Arkadaşlık",
+    "config.GifterLovedGiftExtraFriendship.tooltip": "Hediye Veren uzmanlığına sahipken sevilen hediyeler için kazanılan fazladan arkadaşlık puanı.",
+    "config.GifterLikedGiftExtraFriendship": "Hoşlanılan Hediye Fazladan Arkadaşlık",
+    "config.GifterLikedGiftExtraFriendship.tooltip": "Hediye Veren uzmanlığına sahipken hoşlanılan hediyeler için kazanılan fazladan arkadaşlık puanı.",
+    "config.GifterNeutralGiftExtraFriendship": "Tepki Verilmeyen Hediye Fazladan Arkadaşlık",
+    "config.GifterNeutralGiftExtraFriendship.tooltip": "Hediye Veren uzmanlığına sahipken tepki verilmeyen hediyeler için kazanılan fazladan arkadaşlık puanı.",
 
-    "config.HelpfulProfessionModifiers": "Helpful Profession Modifiers",
-    "config.HelpfulRewardMultiplier": "Reward Multiplier",
-    "config.HelpfulRewardMultiplier.tooltip": "Multiplies quest reward money by this amount when you have the Helpful profession",
+    "config.HelpfulProfessionModifiers": "Yardımsever Uzmanlığı Ayarları",
+    "config.HelpfulRewardMultiplier": "Ödül Çarpanı",
+    "config.HelpfulRewardMultiplier.tooltip": "Yardımsever uzmanlığına sahip olduğunuzda görev ödülü parasını bu miktarla çarpar.",
 
-    "config.HagglerProfessionModifiers": "Haggler Profession Modifiers",
-    "config.HagglerMinHeartLevel": "Min Heart Level",
-    "config.HagglerMinHeartLevel.tooltip": "Begins giving discounts when friendship is at this level when you have the Haggler profession",
-    "config.HagglerDiscountPercentPerHeartLevel": "Discount Percent Per Heart Level",
-    "config.HagglerDiscountPercentPerHeartLevel.tooltip": "Extra discount percent per heart level starting at the minimum heart level",
+    "config.HagglerProfessionModifiers": "Pazarlıkçı Uzmanlığı Ayarları",
+    "config.HagglerMinHeartLevel": "Min. Kalp Seviyesi",
+    "config.HagglerMinHeartLevel.tooltip": "Pazarlıkçı uzmanlığına sahipken arkadaşlık bu seviyedeyken indirim kazanmaya başlarsınız.",
+    "config.HagglerDiscountPercentPerHeartLevel": "Kalp Seviyesi Başına İndirim Yüzdesi",
+    "config.HagglerDiscountPercentPerHeartLevel.tooltip": "Minimum kalp seviyesinden başlayarak kalp seviyesi başına ekstra indirim yüzdesi.",
 
-    "config.BelovedProfessionModifiers": "Beloved Profession Modifiers",
-    "config.BelovedGiftPercentChance": "Gift Percent Chance",
-    "config.BelovedGiftPercentChance.tooltip": "Chance to get a gift from someone when you have the Beloved profession",
-    "config.BelovedGiftRarePercentChance": "Rare Gift Percent Chance",
-    "config.BelovedGiftRarePercentChance.tooltip": "Chance that a gift is rare",
-    "config.BelovedGiftSuperRarePercentChance": "Super Rare Gift Percent Chance",
-    "config.BelovedGiftSuperRarePercentChance.tooltip": "Chance that a rare gift is super rare"
+    "config.BelovedProfessionModifiers": "Sevilen Uzmanlığı Ayarları",
+    "config.BelovedGiftPercentChance": "Hediye Şansı Yüzdesi",
+    "config.BelovedGiftPercentChance.tooltip": "Sevilen uzmanlığına sahipken birinden bir hediye alma şansı.",
+    "config.BelovedGiftRarePercentChance": "Nadir Hediye Şansı Yüzdesi",
+    "config.BelovedGiftRarePercentChance.tooltip": "Bir hediyenin nadir olma şansı.",
+    "config.BelovedGiftSuperRarePercentChance": "Süper Nadir Hediye Şansı Yüzdesi",
+    "config.BelovedGiftSuperRarePercentChance.tooltip": "Nadir bir hediyenin süper nadir olma şansı."
 }
