--- a/HalloweenSeason/[CP] HalloweenSeason/i18n/default.json
+++ b/HalloweenSeason/[CP] HalloweenSeason/i18n/default.json
@@ -3,7 +3,7 @@
     "tv.intro": "Breaking Spooky News Announcment!",
     "tv.text0": "Actually, nevermind. There is no breaking news today... (Do you have dependency mods installed?)",
     "tv.text1": "An outbreak of strange monsters is terrorizing Stardew Valley! Reports say that these monsters sometimes drop a sugary treat. More on this story as it develops...",
-    "tv.text2": "Local trees seem to be forming sugar crystals in their branches. This mysterious phenomenon has bioligists baffled. What could be causing this?",
+    "tv.text2": "Local trees seem to be forming sugar crystals in their branches. This mysterious phenomenon has biologists baffled. What could be causing this?",
     "tv.text3": "A littering epidemic has struck local towns! Officials say that someone has been leaving uneaten candy around pristine forests. Who could be behind such a crime?",
     "tv.text4": "A shipment of sugar candy from the Gotoro Empire has capsized last night. Oceanographers say currents could carry these candies to beaches around the world.",
     "tv.text5": "Mountainous regions have seen an influx of sweet foragables pop up over-night. Squirrelologists believe the bushy-tailed rodents may be behind this occurance.",
@@ -17,7 +17,10 @@
     "buff.display": "Halloween Candy",
     "buff.description": "Luck +{{amount}}",
 
-    "dialogue.HalloweenGiftFrom": "Here, you seem like you might like this.",
+    "dialogue.HalloweenGiftFrom1": "Here, you seem like you might like this.",
+    "dialogue.HalloweenGiftFrom2": "I found this today, and thought you should have it.",
+    "dialogue.HalloweenGiftFrom3": "Did you want this? Go ahead and take it.",
+    "dialogue.HalloweenGiftFrom4": "I have something for you here...",
 
     "dialogue.HalloweenGiftFrom.Jas": "The shadow man wants you to have this.",
     "dialogue.HalloweenGiftFrom.Vincent": "I'm supposed to give this to you.",
@@ -25,9 +28,18 @@
     "dialogue.HalloweenGiftFrom.Abigail": "I don't know what this is about, but you should take this.",
     "dialogue.HalloweenGiftFrom.Emily": "I had a dream where I was supposed to give you something. Go ahead and take it!",
 
-    "dialogue.HalloweenGiftTo": "Wow, today seems like the perfect day for this. Thank you!",
+    "dialogue.HalloweenGiftTo1": "Wow, today seems like the perfect day for a sweet. Thank you!",
+    "dialogue.HalloweenGiftTo2": "This somehow feels like just the right time for having candy.",
+    "dialogue.HalloweenGiftTo3": "I was just in the mood for candy today, thanks!",
+    "dialogue.HalloweenGiftTo4": "Happy Hallowe...I mean, wait...what? Anyways, thanks.",
 
-    "dialogue.NotHalloweenGiftTo": "Hmm, I'm just not that excited about this today...",
+    "dialogue.HalloweenGiftTo.Abigail": "This reminds me of Spirits Eve. That's my favorite holiday!",
+
+    "dialogue.NotHalloweenGiftTo1": "Hmm, I'm just not that excited about this today...",
+    "dialogue.NotHalloweenGiftTo2": "I'm not really in the mood for sweets today.",
+    "dialogue.NotHalloweenGiftTo3": "I guess I'll take it.",
+    "dialogue.NotHalloweenGiftTo4": "Thanks, I guess.",
+
     "dialogue.NotHalloweenGiftTo.Abigail": "Today doesn't quite feel spooky enough for this.",
     "dialogue.NotHalloweenGiftTo.Wizard": "It's not the time for this..."
 }
