--- a/BinningSkill/ContentPatcher/i18n/default.json
+++ b/BinningSkill/ContentPatcher/i18n/default.json
@@ -1,4 +1,17 @@
 ﻿{
+    "item.CopperGarbageHat.name": "Copper Garbage Hat",
+    "item.CopperGarbageHat.desc": "This garbage 'hat' has a nice sheen.",
+    "item.IronGarbageHat.name": "Iron Garbage Hat",
+    "item.IronGarbageHat.desc": "An extra-sturdy garbage can lid you can wear as a hat.",
+    "item.GoldGarbageHat.name": "Gold Garbage Hat",
+    "item.GoldGarbageHat.desc": "Why did someone make a garbage can out of gold anyways?",
+    "item.IridiumGarbageHat.name": "Iridium Garbage Hat",
+    "item.IridiumGarbageHat.desc": "A beautiful purple hat made from the lid of a garbage can.",
+    "item.RadioactiveGarbageHat.name": "Radioactive Garbage Hat",
+    "item.RadioactiveGarbageHat.desc": "Maybe it'd be better not to wear this...",
+    "item.PrismaticGarbageHat.name": "Prismatic Garbage Hat",
+    "item.PrismaticGarbageHat.desc": "It's shimmering with prismatic energy...but it's still a garbage can lid...",
+
     "bc.composter.name": "Composter",
     "bc.composter.desc": "A machine that turns edible matter into fertilizer.",
     "bc.trashcan.name": "Trash Bin",
