Update i18n files for binning skill

--- a/BinningSkill/i18n/default.json
+++ b/BinningSkill/i18n/default.json
@@ -10,8 +10,8 @@
     "profession.Recycler.desc": "Cheaper cost to craft Recycling Machines.",
     "profession.Recycler.pdesc": "Cheaper cost to craft Recycling Machines and Advanced Recycling Machines.",
     "profession.Environmentalist.name": "Environmentalist",
-    "profession.Environmentalist.desc": "Gain friendship for every {{RecyclingCountToGainFriendship}} trash recycled.",
-    "profession.Environmentalist.pdesc": "Gain more friendship from every {{RecyclingCountToGainFriendship}} trash recycled.",
+    "profession.Environmentalist.desc": "Gain {{extra}} friendship for every {{amount}} trash recycled.",
+    "profession.Environmentalist.pdesc": "Gain {{pExtra}} friendship from every {{amount}} trash recycled.",
     "profession.Salvager.name": "Salvager",
     "profession.Salvager.desc": "Get more output from Recycling Machines.",
     "profession.Salvager.pdesc": "Get more output from Recycling Machines, Recycling Bins, and Trash Cans.",
@@ -53,7 +53,7 @@
     "config.PerLevelBaseDropChanceBonus.tooltip": "Additional percent chance per level of getting a trash drop.  Stacks with base chance and daily luck.",
     "config.PerLevelRareDropChanceBonus": "Per Level Rare Drop Chance Bonus",
     "config.PerLevelRareDropChanceBonus.tooltip": "Additional percent chance per level of getting certain rare trash drops.",
-    "config.MegaMinLevel": "Mega Drop Mininum Level",
+    "config.MegaMinLevel": "Mega Drop Minimum Level",
     "config.MegaMinLevel.tooltip": "Minimum level required to have any chance of getting 'Mega' trash drops.  In vanilla, these are drops which play the crit sound.",
     "config.DoubleMegaMinLevel": "Double Mega Minimum Level",
     "config.DoubleMegaMinLevel.tooltip": "Minimum level required to have any chance of getting 'Double Mega' trash drops.  In vanilla, these are drops which play the explosion sound.",
