--- a/BinningSkill/i18n/default.json
+++ b/BinningSkill/i18n/default.json
@@ -62,29 +62,43 @@
     "config.ProfessionModifiers.tooltip": "Configure professions.",
     "config.RecyclerProfessionModifiers": "Recycler Profession Modifiers",
     "config.RecyclerProfessionModifiers.tooltip": "Configure Recycler Profession.",
+
     "config.EnvironmentalistProfessionModifiers": "Environmentalist Profession Modifiers",
     "config.EnvironmentalistProfessionModifiers.tooltip": "Configure Environmentalist Profession.",
-    "config.RecyclingCountToGainFriendship": "Recycling Count to Gain Friendship",
-    "config.RecyclingCountToGainFriendship.tooltip": "Number of items to recycle to gain friendship when using Environmentalist profession.",
-    "config.RecyclingFriendshipGain": "Recycling Friendship Gain",
-    "config.RecyclingFriendshipGain.tooltip": "Amount of friendship to gain with the community for recycling when using Environmentalist profession.",
-    "config.RecyclingPrestigeFriendshipGain": "Recycling Prestige Friendship Gain",
-    "config.RecyclingPrestigeFriendshipGain.tooltip": "Amount of additional friendship to gain with the community for recycling when Environmentalist profession is prestiged.",
+    "config.EnvironmentalistRecyclingCountToGainFriendship": "Recycling Count to Gain Friendship",
+    "config.EnvironmentalistRecyclingCountToGainFriendship.tooltip": "Number of items to recycle to gain friendship when using Environmentalist profession.",
+    "config.EnvironmentalistRecyclingFriendshipGain": "Recycling Friendship Gain",
+    "config.EnvironmentalistRecyclingFriendshipGain.tooltip": "Amount of friendship to gain with the community for recycling when using Environmentalist profession.",
+    "config.EnvironmentalistPrestigeRecyclingFriendshipGain": "Recycling Prestige Friendship Gain",
+    "config.EnvironmentalistPrestigeRecyclingFriendshipGain.tooltip": "Amount of additional friendship to gain with the community for recycling when Environmentalist profession is prestiged.",
+
     "config.SalvagerProfessionModifiers": "Salvager Profession Modifiers",
     "config.SalvagerProfessionModifiers.tooltip": "Configure Salvager Profession.",
+    "config.SalvagerCommonDropMin": "Salvager Common Drop Minimum",
+    "config.SalvagerCommonDropMin.tooltip": "Minimum amount of output from machines affected by salvager profession when output is common.",
+    "config.SalvagerCommonDropMax": "Salvager Common Drop Maximum",
+    "config.SalvagerCommonDropMax.tooltip": "Maximum amount of output from machines affected by salvager profession when output is common.",
+    "config.SalvagerRareDropMin": "Salvager Rare Drop Minimum",
+    "config.SalvagerRareDropMin.tooltip": "Minimum amount of output from machines affected by salvager profession when output is rare.",
+    "config.SalvagerRareDropMax": "Salvager Rare Drop Maximum",
+    "config.SalvagerRareDropMax.tooltip": "Maximum amount of output from machines affected by salvager profession when output is rare.",
+
     "config.SneakProfessionModifiers": "Sneak Profession Modifiers",
     "config.SneakProfessionModifiers.tooltip": "Configure Sneak Profession.",
-    "config.NoiseReduction": "Noise Reduction",
-    "config.NoiseReduction.tooltip": "Range decrease of noise when digging through trash.",
-    "config.PrestigeNoiseIncrease": "Prestige Noise Increase",
-    "config.PrestigeNoiseIncrease.tooltip": "Range increase of noise when digging through trash while prestiged.",
+    "config.SneakNoiseReduction": "Noise Reduction",
+    "config.SneakNoiseReduction.tooltip": "Range decrease of noise when digging through trash.",
+    "config.SneakPrestigeNoiseIncrease": "Prestige Noise Increase",
+    "config.SneakPrestigeNoiseIncrease.tooltip": "Range increase of noise when digging through trash while prestiged.",
+
     "config.UpsellerProfessionModifiers": "Upseller Profession Modifiers",
     "config.UpsellerProfessionModifiers.tooltip": "Configure Upseller Profession.",
+
     "config.ReclaimerProfessionModifiers": "Reclaimer Profession Modifiers",
     "config.ReclaimerProfessionModifiers.tooltip": "Configure Reclaimer Profession.",
     "config.ReclaimerExtraValuePercent": "Reclaimer Extra Value Percent",
     "config.ReclaimerExtraValuePercent.tooltip": "Extra value gained when reclaiming an item via the inventory trash when using the Reclaimer profession.",
     "config.ReclaimerPrestigeExtraValuePercent": "Reclaimer Prestige Extra Value Percent",
     "config.ReclaimerPrestigeExtraValuePercent.tooltip": "Additional extra value gained when reclaimer is prestiged.",
+
     "config.None": "None"
 }
