translate ko.json

--- a/BinningSkill/i18n/ko.json
+++ b/BinningSkill/i18n/ko.json
@@ -1,53 +1,104 @@
 {
-    "skill.name": "비닝",
-    "skill.perk": "+{{bonus}}% 확률로 쓰레기를 더 얻는다",
-    "skill.perk_bonus": "{{rarity}} 등급의 쓰레기를 얻을 기회",
-    "skill.perk_rarity_3": "귀한",
-    "skill.perk_rarity_6": "굉장히 귀한",
-    "skill.perk_rarity_9": "극도로 귀한",
+    "skill.drbirbdev.Binning.name": "분리수거",
+    "skill.perk.base": "쓰레기 획득 확률 {{bonusPercent}}% 증가",
+    "skill.perk.rare": "레어 아이템 획득 확률+{{bonusPercent}}% 증가",
+    "skill.perk.mega_drops": "특별 아이템 획들 확률",
+    "skill.perk.double_mega_drops": "초특별 아이템 획득 확률",
+    "skill.required_level": "분리수거 레벨이 {{level}}이 이상 필요합니다.",
 
-    "recycler.name": "재활용가",
-    "recycler.desc": "재활용 기계의 재료를 보다 싸게 만들 수 있다.",
-    "environmentalist.name": "환경운동가",
-    "environmentalist.desc": "재활용으로 우정을 얻는다.",
-    "salvager.name": "효율적 처리가",
-    "salvager.desc": "재활용 기계로부터 좀 더 좋은 결과물을 얻는다.",
-    "sneak.name": "은신가",
-    "sneak.desc": "쓰레기통을 뒤져도 발견되지 않는다.",
-    "upseller.name": "설득가",
-    "upseller.desc": "주민이 선물로 호감도가 깎이지 않습니다. (쓰레기도 포함)",
-    "reclaimer.name": "회수가",
-    "reclaimer.desc": "아이템을 버릴 시 +{{ReclaimerExtraValuePercent}}%의 값을 추가로 받는다.",
+    "profession.Recycler.name": "재활용가",
+    "profession.Recycler.desc": "재활용 기계 제작하는데 드는 자원이 줄어듭니다.",
+    "profession.Recycler.pdesc": "재활용 기계와 고급 재활용 기걔를 제작하는데 드는 자원이 줄어듭니다.",
+    "profession.Environmentalist.name": "환경운동가",
+    "profession.Environmentalist.desc": "쓰레기를 {{amount}}번 재활용 할 때마다 {{extra}}만큼의 우정을 추가로 얻습니다.",
+    "profession.Environmentalist.pdesc": "쓰레기를 {{amount}}번 재활용 할 때마다 {{pExtra}}만큼의 우정을 추가로 얻습니다.",
+    "profession.Salvager.name": "수거전문가",
+    "profession.Salvager.desc": "재활용 기계로부터 더 많은 생산품을 받습니다.",
+    "profession.Salvager.pdesc": "재활용 기계나 분리수거함, 쓰레기통으로부터 더 많은 아이템을 받습니다.",
+    "profession.Sneak.name": "은닉",
+    "profession.Sneak.desc": "쓰레기통을 뒤질 때 나오는 소음을 줄입니다.",
+    "profession.Sneak.pdesc": "쓰레기통을 뒤진걸 들켜도, 주민들은 도움 받는다 생각합니다. 좀 더 시끄러워도 될지도요?",
+    "profession.Upseller.name": "사기꾼",
+    "profession.Upseller.desc": "주민들이 쓰레기를 포함한 어떤 선물이든 혐오하지 않게 됩니다.",
+    "profession.Upseller.pdesc": "주민들이 쓰레기를 포함한 어떤 선물이든 싫어하지 않게 됩니다.",
+    "profession.Reclaimer.name": "분리수거가",
+    "profession.Reclaimer.desc": "아이템 삭제시 받는 돈을 {{extra}}% 만큼 추가로 받습니다.",
+    "profession.Reclaimer.pdesc": "아이템 삭제시 받는 돈을 {{pExtra}}% 만큼 추가로 받습니다.",
 
-    "config.ExperienceFromTrashFail": "쓰레기부터의 경험치",
-    "config.ExperienceFromTrashFail.tooltip": "쓰레기를 찾았지만 아무것도 얻지 못한 경우의 경험치",
-    "config.ExperienceFromTrashSuccess": "얻은 쓰레기부터의 경험치",
-    "config.ExperienceFromTrashSuccess.tooltip": "쓰레기를 찾아 획득한 경우의 경험치",
-    "config.ExperienceFromTrashBonus": "보너스 쓰레기부터의 경험치",
-    "config.ExperienceFromTrashBonus.tooltip": "쓰레기를 찾아 보너스 쓰레기 획득한 경우의 경험치. 높은 레벨은 보다 더 많은 경험치를 줍니다.",
-    "config.ExperienceFromRecycling": "재활용 경험치",
-    "config.ExperienceFromRecycling.tooltip": "재활용 기계에 쓰레기를 넣어 얻은 경험치",
-    "config.AutomateGrantsXp": "자동화 재활용 경험치",
-    "config.AutomateGrantsXp.tooltip": "Automate모드를 사용할 경우 경험치를 획득 유무",
-    "config.PerLevelBonusDropChance": "레벨에 따른 추가 획득",
-    "config.PerLevelBonusDropChance.tooltip": "레벨에 따른 추가 획득 퍼센티지 가중",
-    "config.RareDropChance": "귀한 등급 획득 기회 ",
-    "config.RareDropChance.tooltip": "추가 쓰레기 획득내 귀한 등급 획득으로 얻어질 비율",
-    "config.SuperRareDropChance": "굉장히 귀한 등급 획득 기회",
-    "config.SuperRareDropChance.tooltip": "귀한 등급 획득내 굉장히 귀한 등급 획득으로 얻어질 비율",
-    "config.UltraRareDropChance": "극도로 귀한 등급 획득 기회",
-    "config.UltraRareDropChance.tooltip": "굉장히 등급 획득내 극도로 귀한 등급 획득으로 얻어질 비율",
-    "config.RecyclingCountToGainFriendship": "환경운동가 - 우정을 얻기 위한 재활용 횟수",
-    "config.RecyclingCountToGainFriendship.tooltip": "환경운동가 스킬 보유시 우정을 얻기 위해 필요한 횟수",
-    "config.RecyclingFriendshipGain": "환경운동가 - 재활용을 통한 얻는 우정 수치",
-    "config.RecyclingFriendshipGain.tooltip": "환경운동가 스킬 보유시 제공하는 우정 수치",
-    "config.SalvagerRareDropChance": "효율적 처리가 - 귀한 획득 기회",
-    "config.SalvagerRareDropChance.tooltip": "효율적 처리가 스킬 보유시 재활용으로 귀한 등급 획득이 얻어질 비율",
-    "config.SalvagerSuperRareDropChance": "효율적 처리가 - 굉장히 귀한 획득 기회",
-    "config.SalvagerSuperRareDropChance.tooltip": "효율적 처리가 스킬 보유시 재활용으로 굉장히 귀한 등급 획득이 얻어질 비율",
-    "config.FriendshipRecovery": "은신가 - 우정 복구",
-    "config.FriendshipRecovery.tooltip": "은신 스킬을 보유시 쓰레기를 뒤짐을 통한 부정적인 반응을 되돌리기 위해 필요한 우정의 양. 바닐라 경우 25이지만 쓰레기통 검색에 대한 주민 반응이 다른 모드에서 조정되면 이 값을 변경해야 합니다.",
-    "config.ReclaimerExtraValuePercent": "회수가 - 추가 비율",
-    "config.ReclaimerExtraValuePercent.tooltip": "회수자 스킬을 보유시 인벤토리 휴지통을 통해 아이템을 회수할 때 얻는 추가 퍼센티지"
+    "sneak.prestige.dialogue.child": "쓰레기통 비워주고 계세요? 전 그런 거 하기 싫어요!",
+    "sneak.prestige.dialogue.teen": "마을 자원봉사 중인가 보네? 고마워!",
+    "sneak.prestige.dialogue.adult": "오, 다른 사람들의 쓰레기를 대신 처리 해주다니, 기특하구나!",
 
+    "config.Experience": "경험치",
+    "config.Experience.tooltip": "경험치를 얼마나 얻을지 설정합니다.",
+    "config.BonusDrops": "추가 획득",
+    "config.BonusDrops.tooltip": "추가 획득 관련 설정을 설정합니다.",
+    "config.Professions": "전문직",
+    "config.Professions.tooltip": "전문직 관련 설정을 합니다.",
+
+    "config.ExperienceModifiers": "경험치 설정",
+    "config.ExperienceModifiers.tooltip": "경험치를 얼마나 얻을지 설정합니다.",
+    "config.ExperienceFromCheckingTrash": "쓰레기통에서 얻는 경험치",
+    "config.ExperienceFromCheckingTrash.tooltip": "쓰레기통을 뒤질 시 얻는 경험치량",
+    "config.ExperienceFromCheckingRecycling": "분리수거함에서 얻는 경험치",
+    "config.ExperienceFromCheckingRecycling.tooltip": "분리수거함에서 결과물 회수 시 얻는 경험치량",
+    "config.ExperienceFromComposting": "퇴비통에서 얻는 경험치량",
+    "config.ExperienceFromComposting.tooltip": "퇴비통에서 결과물 회수 시 얻는 경험치량",
+    "config.ExperienceFromRecycling": "재활용 기계에서 얻는 경험치량",
+    "config.ExperienceFromRecycling.tooltip": "재활용 기계, 고급 재활용 기계에서 얻는 경험치량",
+
+    "config.BonusDropModifiers": "추가 획득 설정",
+    "config.BonusDropModifiers.tooltip": "추가 획득 관련 설정을 설정합니다.",
+    "config.PerLevelBaseDropChanceBonus": "레벨당 획득 확률 추가량",
+    "config.PerLevelBaseDropChanceBonus.tooltip": "쓰레기 획득 확률에 설정된 레벨당 추가 확률을 더합니다. 기본 확률 및 일일 운과 중첩됩니다.",
+    "config.PerLevelRareDropChanceBonus": "레벨당 레어 획득 확률 추가량",
+    "config.PerLevelRareDropChanceBonus.tooltip": "레벨당 추가 확률로 레어 아이템을 획득할 수 있습니다.",
+    "config.MegaMinLevel": "특별 아이템 획득 최소 레벨",
+    "config.MegaMinLevel.tooltip": "쓰레기통에서 폭발음과 함께 얻는 '특별 아이템'을 습득하기 위한 레벨의 최소치를 설정합니다.",
+    "config.DoubleMegaMinLevel": "초특별 아이템 획득 최소 레벨",
+    "config.DoubleMegaMinLevel.tooltip": "더 특별해진, 쓰레기통에서 폭발음과 함께 얻는 '초특별 아이템'을 습득하기 위한 레벨의 최소치를 설정합니다.",
+
+    "config.ProfessionModifiers": "전문직 설정",
+    "config.ProfessionModifiers.tooltip": "전문직 관련 설정을 합니다.",
+    "config.RecyclerProfessionModifiers": "재활용가 전문직 설정",
+    "config.RecyclerProfessionModifiers.tooltip": "재활용가 전문직의 관련 설정을 합니다.",
+
+    "config.EnvironmentalistProfessionModifiers": "환경운동가 전문직 설정",
+    "config.EnvironmentalistProfessionModifiers.tooltip": "환경운동가 전문직 관련 설정을 합니다.",
+    "config.EnvironmentalistRecyclingCountToGainFriendship": "우정을 얻는데 필요한 재활용 횟수",
+    "config.EnvironmentalistRecyclingCountToGainFriendship.tooltip": "환경운동가 선택시 재활용을 얼마나 해야 우정을 얻을 수 있는지 설정합니다.",
+    "config.EnvironmentalistRecyclingFriendshipGain": "재활용을 통해 얻는 우정량",
+    "config.EnvironmentalistRecyclingFriendshipGain.tooltip": "환경운동가 선택시 재활용을 통해 얻는 우정의 양을 설정합니다.",
+    "config.EnvironmentalistPrestigeRecyclingFriendshipGain": "프레스티지: 재활용을 통해 얻는 우정량",
+    "config.EnvironmentalistPrestigeRecyclingFriendshipGain.tooltip": "환경운동가를 프레스티지를 통해 선택시 재활용을 통해 얻는 우정량을 설정합니다.",
+
+    "config.SalvagerProfessionModifiers": "구조가 전문직 설정",
+    "config.SalvagerProfessionModifiers.tooltip": "구조가 전문직 관련 설정을 합니다.",
+    "config.SalvagerCommonDropMin": "최소 일반 획득량",
+    "config.SalvagerCommonDropMin.tooltip": "구조가를 선택할 시 얻는 일반 획득 아이템의 최소 수량을 설정합니다.",
+    "config.SalvagerCommonDropMax": "최대 일반 획득량",
+    "config.SalvagerCommonDropMax.tooltip": "구조가를 선택할 시 얻는 일반 획득 아이템의 최대 수량을 설정합니다.",
+    "config.SalvagerRareDropMin": "최소 특별 획득량",
+    "config.SalvagerRareDropMin.tooltip": "구조가를 선택할 시 얻는 특별 획득 아이템의 최소 수량을 설정합니다.",
+    "config.SalvagerRareDropMax": "최대 특별 획득량",
+    "config.SalvagerRareDropMax.tooltip": "구조가를 선택할 시 얻는 특별 획득 아이템의 최대 수량을 설정합니다.",
+
+    "config.SneakProfessionModifiers": "은닉 전문직 설정",
+    "config.SneakProfessionModifiers.tooltip": "은닉 전문직 관련 설정을 합니다.",
+    "config.SneakNoiseReduction": "소음 감소량",
+    "config.SneakNoiseReduction.tooltip": "소음이 들리는 범위를 얼마나 줄일지 설정합니다.",
+    "config.SneakPrestigeNoiseIncrease": "프레스티지(Prestige) 소음 감소량",
+    "config.SneakPrestigeNoiseIncrease.tooltip": "프레스티지를 통한 은닉 선택시의 소음 들리는 범위를 얼마나 늘릴지 설정합니다.",
+
+    "config.UpsellerProfessionModifiers": "사기꾼 전문직 설정",
+    "config.UpsellerProfessionModifiers.tooltip": "사기꾼 전문직 관련 설정을 합니다.",
+
+    "config.ReclaimerProfessionModifiers": "수거전문가 전문직 설정",
+    "config.ReclaimerProfessionModifiers.tooltip": "수거전문가 전문직 관련 설정을 합니다.",
+    "config.ReclaimerExtraValuePercent": "수거전문가 추가 획득 비율(%)",
+    "config.ReclaimerExtraValuePercent.tooltip": "수거전문가 선택시 아이템 소거를 통해 얻는 골드의 추가 비율을 설정합니다. (단위: %)",
+    "config.ReclaimerPrestigeExtraValuePercent": "프레스티지(Prestige) 수거전문가 추가 획득 비율(%)",
+    "config.ReclaimerPrestigeExtraValuePercent.tooltip": "수거전문가를 프레스티지를 통해 선택시 아이템 소거를 통해 얻는 골드의 추가 비율을 설정합니다. (단위: %)",
+
+    "config.None": "없음"
 }
