--- a/HalloweenSeason/[CP] HalloweenSeason/i18n/ko.json
+++ b/HalloweenSeason/[CP] HalloweenSeason/i18n/ko.json
@@ -3,7 +3,7 @@
     "item.halloween_candy.description": "할로윈을 맞아 모두에게 사랑받는 사탕.",
     "tv.name": "스푸키 뉴스",
     "tv.intro": "으스스한 뉴스 속보!",
-    "tv.text0": "사실, 신경 쓰지 마세요. 오늘은 속보가 없습니다... (종속성 모드가 설치되어 있나요?)",
+    "tv.text0": "사실, 신경 쓰지 마세요. 오늘은 속보가 없습니다... (필요한 모드가 설치되어 있나요?)",
     "tv.text1": "이상한 괴물들이 스타듀 계곡을 공포에 떨게 하고 있습니다! 제보에 따르면 이 괴물들은 때때로 달콤한 간식을 떨어뜨린다고 합니다. 이야기가 전개됨에 따라 더 자세히 알아보세요...",
     "tv.text2": "이 지역 나무들은 나뭇가지에 설탕 결정을 형성하는 것처럼 보입니다. 이 신비한 현상은 생물학자들을 당황하게 만들었습니다. 그 원인은 무엇일까요?",
     "tv.text3": "쓰레기 무단 투기가 지역 마을을 강타했습니다! 관리들은 누군가 먹지 않은 사탕을 깨끗한 숲 주변에 버렸다고 말합니다. 누가 이런 범죄를 저지른 것일까요?",
