--- a/BinningSkill/i18n/fr.json
+++ b/BinningSkill/i18n/fr.json
@@ -1,63 +1,104 @@
-﻿{
-    "skill.name": "Ramassage des poubelles",
-    "skill.perk": "+{{bonus}}% chance d'obtenir un déchet supplémentaire",
-    "skill.perk_bonus": "Chance d'obtenir {{rarity}} déchets supplémentaires",
-    "skill.perk_rarity_3": "rare",
-    "skill.perk_rarity_6": "super rare",
-    "skill.perk_rarity_9": "ultra rare",
+{
+    "skill.drbirbdev.Binning.name": "Recyclage",
+    "skill.perk.base": "+{{bonusPercent}}% chance de butin de déchets",
+    "skill.perk.rare": "+{{bonusPercent}}% chance de butin rare",
+    "skill.perk.mega_drops": "Chance d’avoir des butins très rares.",
+    "skill.perk.double_mega_drops": "Chance d’avoir des butins extrêmement rares.",
+    "skill.required_level": "Requiert Recyclage niveau {{level}}.",
 
-    "recycler.name": "Recycleur",
-    "recycler.desc": "Les machines de recyclage coûtent moins cher à fabriquer",
-    "environmentalist.name": "Environnementaliste",
-    "environmentalist.desc": "Obtenez de l'amitié en recyclant des déchets",
-    "salvager.name": "Récupérateur",
-    "salvager.desc": "Obtenez de meilleurs objets avec les machines à recyclage",
-    "sneak.name": "Furtif",
-    "sneak.desc": "Vous ne pouvez plus vous faire attraper pendant que vous fouillez dans les poubelles",
-    "upseller.name": "Commercial",
-    "upseller.desc": "Les habitants ne peuvent plus détester un cadeau, même les déchets",
-    "reclaimer.name": "Économe",
-    "reclaimer.desc": "+{{ReclaimerExtraValuePercent}}% de la valeur des objets obtenue après recyclage",
-
-    "recycler.prestige.desc": "Les machines de recyclage coûtent encore moins cher à fabriquer",
-    "environmentalist.prestige.desc": "Obtenez le double de l'amitié en recyclant des déchets",
-    "salvager.prestige.desc": "Obtenez d'encore meilleurs objets avec les machines à recyclage",
-    "sneak.prestige.desc": "Quand vous vous faîtes attraper en train de fouiller dans les poubelles, les habitants penseront que vous aidez la communauté",
-    "upseller.prestige.desc": "Les habitants sont au minimum neutres face aux cadeaux que vous leur offrez",
-    "reclaimer.prestige.desc": "+{{ReclaimerExtraValuePercent}}% * 1.5 de la valeur des objets obtenue après recyclage",
+    "profession.Recycler.name": "Recycleur",
+    "profession.Recycler.desc": "Coût moins élevé pour fabriquer des machines de recyclage.",
+    "profession.Recycler.pdesc": "Coût moins élevé pour fabriquer des machines de recyclage et des machines de recyclage avancées",
+    "profession.Environmentalist.name": "Environnementaliste",
+    "profession.Environmentalist.desc": "Gagnez {{extra}} amitié pour chaque {{amount}} déchet recyclé.",
+    "profession.Environmentalist.pdesc": "Gagnez {{pExtra}} amitié pour chaque {{amount}} déchet recyclé.",
+    "profession.Salvager.name": "Récupérateur",
+    "profession.Salvager.desc": "Obtenez de meilleurs résultats des machines de recyclage.",
+    "profession.Salvager.pdesc": "Obtenez de meilleurs résultats des machines de recyclage, poubelles de tri et poubelles.",
+    "profession.Sneak.name": "Furtif",
+    "profession.Sneak.desc": "Moins de bruit lorsque vous fouillez dans les poubelles.",
+    "profession.Sneak.pdesc": "Lorsque vous êtes pris en train de fouiller dans les poubelles, les villageois pensent que vous vous rendez utile. Vous pouvez faire plus de bruit que jamais.",
+    "profession.Upseller.name": "Brocanteur",
+    "profession.Upseller.desc": "Les villageois ne haïssent jamais les cadeaux, même les déchets.",
+    "profession.Upseller.pdesc": "Les villageois ne détestent jamais les cadeaux, même les déchets.",
+    "profession.Reclaimer.name": "Récupérateur",
+    "profession.Reclaimer.desc": "+{{extra}}% valeur en recyclant des objets.",
+    "profession.Reclaimer.pdesc": "+{{pExtra}}% valeur en recyclant des objets.",
 
     "sneak.prestige.dialogue.child": "Oh, tu sors les poubelles ? Je déteste faire ça !",
     "sneak.prestige.dialogue.teen": "Je vois que tu apportes ton aide dans la ville. Merci !",
     "sneak.prestige.dialogue.adult": "Wow, tu sors les poubelles des autres, quel altruisme !",
 
-    "config.ExperienceFromTrashFail": "Expérience gagnée en fouillant dans les poubelles - Échec",
-    "config.ExperienceFromTrashFail.tooltip": "Expérience gagnée en fouillant dans les poubelles et en ne trouvant rien",
-    "config.ExperienceFromTrashSuccess": "Expérience gagnée en fouillant dans les poubelles - Réussite",
-    "config.ExperienceFromTrashSuccess.tooltip": "Expérience gagnée en fouillant dans les poubelles et en trouvant du loot standard",
-    "config.ExperienceFromTrashBonus": "Expérience gagnée en fouillant dans les poubelles - Bonus",
-    "config.ExperienceFromTrashBonus.tooltip": "Expérience gagnée en fouillant dans les poubelles et en trouvant du loot bonus. Plus les niveaux sont hauts, et plus l'expérience gagnée est élevée",
+    "config.Experience": "Expérience",
+    "config.Experience.tooltip": "Configurer le gain d’expérience.",
+    "config.BonusDrops": "Butin bonus",
+    "config.BonusDrops.tooltip": "Configurer le butin bonus.",
+    "config.Professions": "Professions",
+    "config.Professions.tooltip": "Configurer les professions.",
+
+    "config.ExperienceModifiers": "Modificateurs d’expérience",
+    "config.ExperienceModifiers.tooltip": "Configurer le gain d’expérience.",
+    "config.ExperienceFromCheckingTrash": "Exp des déchets",
+    "config.ExperienceFromCheckingTrash.tooltip": "Expérience obtenue en cherchant dans les déchets.",
+    "config.ExperienceFromCheckingRecycling": "Exp des poubelles de tri",
+    "config.ExperienceFromCheckingRecycling.tooltip": "Expérience obtenue en récupérant des poubelles de tri.",
+    "config.ExperienceFromComposting": "Exp du compostage",
+    "config.ExperienceFromComposting.tooltip": "Expérience obtenue en récupérant des composteurs.",
     "config.ExperienceFromRecycling": "Expérience gagnée en recyclant",
     "config.ExperienceFromRecycling.tooltip": "Expérience gagnée en mettant des déchets dans la machine à recycler",
-    "config.AutomateGrantsXp": "Automate fait gagner de l'expérience",
-    "config.AutomateGrantsXp.tooltip": "Que recycler/fouiller dans les poubelles automatiquement donne de l'expérience quand le mod automate est utilisé",
-    "config.PerLevelBonusDropChance": "Chance de drop bonus par niveau",
-    "config.PerLevelBonusDropChance.tooltip": "Pourcentage additionnel de chance par niveau d'obtenir un drop bonus",
-    "config.RareDropChance": "Chance de drop un objet rare",
-    "config.RareDropChance.tooltip": "Chance que les drops bonus soient rares",
-    "config.SuperRareDropChance": "Chance de drop un objet super rare",
-    "config.SuperRareDropChance.tooltip": "Chance que les drops rares soient super rares",
-    "config.UltraRareDropChance": "Chance de drop un objet ultra rare",
-    "config.UltraRareDropChance.tooltip": "Chance que les drops super rares soient ultra rares",
-    "config.RecyclingCountToGainFriendship": "Nombre de recyclages pour obtenir de l'amitié",
-    "config.RecyclingCountToGainFriendship.tooltip": "Nombre de recyclages pour obtenir de l'amitié quand le métier d'environnementaliste est actif",
-    "config.RecyclingFriendshipGain": "Amitié gagnée par le recyclage",
-    "config.RecyclingFriendshipGain.tooltip": "Montant d'amitié gagnée avec la communauté en recyclant quand le métier d'environnementaliste est actif",
-    "config.SalvagerRareDropChance": "Chance de drop rare du récupérateur",
-    "config.SalvagerRareDropChance.tooltip": "Chance de drop rare avec le recyclage quand le métier de récupérateur est actif",
-    "config.SalvagerSuperRareDropChance": "Chance de drop super rare du récupérateur",
-    "config.SalvagerSuperRareDropChance.tooltip": "Chance que les objets rares sont super rares quand le métier de récupérateur est actif",
-    "config.FriendshipRecovery": "Récupération d'amitié furtive",
-    "config.FriendshipRecovery.tooltip": "Le montant d'amitié demandée pour annuler les actions négatives après avoir été attrapé en train de fouiller dans les poubelles pendant que le métier de furtif est actif. 25 pour le jeu en vanilla, mais si les réactions des habitants sont modifiées par un mod, cette valeur doit être changée.",
-    "config.ReclaimerExtraValuePercent": "Pourcentage de la valeur ajoutée de l'économe",
-    "config.ReclaimerExtraValuePercent.tooltip": "Valeur ajoutée gagnée quand vous vendez via la poubelle de l'inventaire quand le métier d'économe est actif"
+
+    "config.BonusDropModifiers": "Modificateurs de butin bonus",
+    "config.BonusDropModifiers.tooltip": "Configurer le butin bonus.",
+    "config.PerLevelBaseDropChanceBonus": "%chance butin bonus par niveau",
+    "config.PerLevelBaseDropChanceBonus.tooltip": "Pourcentage de chance additionnel par niveau d’obtenir un déchet. Se cumule avec la chance journalière et la chance de base.",
+    "config.PerLevelRareDropChanceBonus": "%chance butin rare par niveau",
+    "config.PerLevelRareDropChanceBonus.tooltip": "Pourcentage de chance additionnel par niveau d’obtenir un déchet rare. ",
+    "config.MegaMinLevel": "%chance butin mega par niveau",
+    "config.MegaMinLevel.tooltip": "Pourcentage de chance additionnel par niveau d’obtenir un déchet « Mega ». Dans le jeu de base, ce sont les butins qui font jouer le son de critique.",
+    "config.DoubleMegaMinLevel": "Niveau minimum Double Mega",
+    "config.DoubleMegaMinLevel.tooltip": "Niveau minimum requis pour avoir une chance d’avoir un butin de déchet \"Double Mega\". Dans le jeu de base, ce sont les butins qui font jouer le son d’explosion.",
+
+    "config.ProfessionModifiers": "Modificateurs de profession",
+    "config.ProfessionModifiers.tooltip": "Configurer les professions.",
+    "config.RecyclerProfessionModifiers": "Modificateurs de Recycleur",
+    "config.RecyclerProfessionModifiers.tooltip": "Configurer la profession de Recycleur (machines de recyclage).",
+
+    "config.EnvironmentalistProfessionModifiers": "Modificateurs d’Environnementaliste",
+    "config.EnvironmentalistProfessionModifiers.tooltip": "Configurer la profession d’Environnementaliste.",
+    "config.EnvironmentalistRecyclingCountToGainFriendship": "Nombre de recyclage pour amitié",
+    "config.EnvironmentalistRecyclingCountToGainFriendship.tooltip": "Nombre d’objets à recycler pour obtenir de l’amitié en utilisant la profession d’Environnementaliste.",
+    "config.EnvironmentalistRecyclingFriendshipGain": "Gain d’amitié en recyclant",
+    "config.EnvironmentalistRecyclingFriendshipGain.tooltip": "Montant d’amitié obtenu avec la communauté pour le recyclage en utilisant la profession d’Environnementaliste.",
+    "config.EnvironmentalistPrestigeRecyclingFriendshipGain": "Gain de recyclage (Prestige)",
+    "config.EnvironmentalistPrestigeRecyclingFriendshipGain.tooltip": "Montant d’amitié additionnel obtenu en cas de Prestige.",
+
+    "config.SalvagerProfessionModifiers": "Modificateurs de Récupérateur",
+    "config.SalvagerProfessionModifiers.tooltip": "Configurer la profession de récupérateur.",
+    "config.SalvagerCommonDropMin": "Butin commun minimum",
+    "config.SalvagerCommonDropMin.tooltip": "Montant minimum de produit de machines affectées par la profession de récupérateur lorsque le résultat est commun.",
+    "config.SalvagerCommonDropMax": "Butin commun maximum",
+    "config.SalvagerCommonDropMax.tooltip": "Montant maximum de produit de machines affectées par la profession de récupérateur lorsque le résultat est commun.",
+    "config.SalvagerRareDropMin": "Butin rare minimum",
+    "config.SalvagerRareDropMin.tooltip": "Montant minimum de produit de machines affectées par la profession de récupérateur lorsque le résultat est rare.",
+    "config.SalvagerRareDropMax": "Butin rare maximum",
+    "config.SalvagerRareDropMax.tooltip": "Montant maximum de produit de machines affectées par la profession de récupérateur lorsque le résultat est rare.",
+
+    "config.SneakProfessionModifiers": "Modificateurs de Furtif",
+    "config.SneakProfessionModifiers.tooltip": "Configurer la profession de Furtif",
+    "config.SneakNoiseReduction": "Réduction de bruit",
+    "config.SneakNoiseReduction.tooltip": "Portée de diminution du bruit en fouillant dans les poubelles.",
+    "config.SneakPrestigeNoiseIncrease": "Réduction de bruit (Prestige)",
+    "config.SneakPrestigeNoiseIncrease.tooltip": "Portée de diminution supplémentaire en cas de Prestige.",
+
+    "config.UpsellerProfessionModifiers": "Modificateurs de Brocanteur",
+    "config.UpsellerProfessionModifiers.tooltip": "Configurer la profession de Brocanteur (offre de déchets aux villageois).",
+
+    "config.ReclaimerProfessionModifiers": "Modificateurs de Récupérateur",
+    "config.ReclaimerProfessionModifiers.tooltip": "Configurer la profession de Récupérateur.",
+    "config.ReclaimerExtraValuePercent": "% valeur ajoutée",
+    "config.ReclaimerExtraValuePercent.tooltip": "Valeur ajoutée gagnée quand vous vendez via la poubelle de l'inventaire quand le métier de récupérateur est actif",
+    "config.ReclaimerPrestigeExtraValuePercent": "% valeur ajoutée (Prestige)",
+    "config.ReclaimerPrestigeExtraValuePercent.tooltip": "Valeur ajoutée gagnée en cas de Prestige.",
+
+    "config.None": "Aucun"
 }
